# sdh-forms

./: .hgignore  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.py
src/sdh/forms/: __init__.py  base.py  conf.py  fields.py  forms.py  formsets.py  renderers.py  widgets.py
src/sdh/forms/templates/sdh/forms/: field.html  form.html
src/sdh/forms/templates/sdh/forms/widgets/: label_input.html  label_select.html  multiple_label_input.html
src/sdh/forms/templatetags/: sdhforms.py
