[build-system]
requires = ["setuptools >= 67.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["sdh.forms"]

[project]
name = "sdh.forms"
description = "sdh.forms library wrap Django forms with custom template-way render solution."
version = "2.4.1"
dependencies = [
  "Django>=3.2"
]
requires-python = ">= 3.8"
license = {file = 'LICENSE'}

authors = [
    {name = "Viacheslav Vic Bukhantsov", email = "vic.bukhantsov@gmail.com"},
    {name = "Borys Vorona", email="borysvorona@gmail.com"},
    {name = "Alexey Babarykin", email="mobil.light@gmail.com"},
    {name = "Oleg Kozij", email="olekhelk@gmail.com"},
]

maintainers = [
  {name = "Viacheslav Vic Bukhantsov", email = "vic.bukhantsov@gmail.com"}
]

classifiers = [
        'Development Status :: 5 - Production/Stable',
        'Intended Audience :: Developers',
        'Framework :: Django',
        'License :: OSI Approved :: BSD License',
        'Operating System :: OS Independent',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
        'Topic :: Software Development',
        'Topic :: Software Development :: Libraries'
]

[project.urls]
Repository = "https://github.com/sdh-global/sdh-forms"
